batch-mode/ai-json-template-derive/tests/trybuild/fail_multiple_unsupported_types.stderr
error: Unsupported field type for AiJsonTemplate: i64
  --> tests/trybuild/fail_multiple_unsupported_types.rs:20:15
   |
20 |     quantity: i64,
   |               ^^^
